// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrimaryButton /> matches disabled snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-x9wjhs"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`<PrimaryButton /> matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-exwq4w"
  >
    Label
  </button>
</DocumentFragment>
`;
